fix responsive on mobile

--- a/f8/w3_band/assets/css/responsive.css
+++ b/f8/w3_band/assets/css/responsive.css
@@ -1,9 +1,9 @@
 /* PC */
-@media (min-width: 1024px) {
+@media (min-width: 64em) {
 }
 
 /* Tablet & Mobile */
-@media (max-width: 1023px) {
+@media (max-width: 63.9375em) {
   #nav .subnav a {
     padding: 5px 12px;
   }
@@ -14,10 +14,15 @@
 
   .contact-form .form-control {
     padding: 15px;
+    font-size: 16px;
   }
 
   .contact-info {
     line-height: 2;
+  }
+
+  .contact-submit-btn {
+    font-size: 18px;
   }
 
   .social-list {
@@ -35,11 +40,11 @@
 }
 
 /* Tablet */
-@media (min-width: 740px) and (max-width: 1023px) {
+@media (min-width: 46.25em) and (max-width: 63.9375em) {
 }
 
 /* Mobile */
-@media (max-width: 740px) {
+@media (max-width: 46.1875em) {
   .s-full-width,
   .s-col-full {
     width: 100% !important;
