--- a/f8/w3_band/assets/css/style.css
+++ b/f8/w3_band/assets/css/style.css
@@ -47,6 +47,8 @@ html {
   display: inline-block;
   margin-top: 15px;
   border: none;
+  appearance: none;
+  -webkit-appearance: none;
 }
 
 .btn:hover {
@@ -199,7 +201,7 @@ html {
   position: relative;
   margin-top: 46px;
   padding-top: 50%;
-  background: url("/assets/img/slider/slider1.jpg") top center / cover no-repeat;
+  background: url("../img/slider/slider1.jpg") top center / cover no-repeat;
 }
 
 #slider .text-content {
@@ -218,6 +220,7 @@ html {
 #slider .text-description {
   margin-top: 25px;
   font-size: 15px;
+  text-shadow: 0 0 1px #000;
 }
 
 #content {
